Make things modular and in structure

--- a/MELD/1.smaller-datasets.ipynb
+++ b/MELD/1.smaller-datasets.ipynb
@@ -26,26 +26,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'erc'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-b3d24d051b09>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0merc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'erc'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import erc"
+    "import yaml\n",
+    "\n",
+    "with open('configs/paths.yaml', 'r') as stream:\n",
+    "    PATHS = yaml.safe_load(stream)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -62,18 +53,15 @@
     }
    ],
    "source": [
-    "annotations_path = '/home/tk/repos/MELD/data/MELD/train_sent_emo.csv'\n",
-    "VIDS_DIR = \"/home/tk/datasets/MELD/MELD.Raw/train/train_splits\"\n",
-    "\n",
     "import os\n",
     "from glob import glob\n",
     "import csv\n",
     "import shutil\n",
-    "with open(annotations_path) as f:\n",
+    "with open(PATHS['ANNOTATIONS']['train']) as f:\n",
     "    reader = csv.reader(f)\n",
     "    annotations = list(reader)\n",
     "\n",
-    "utts = glob(os.path.join(VIDS_DIR, '*.mp4'))\n",
+    "utts = glob(os.path.join(PATHS['ORIGINAL_VIDEOS']['train'], '*.mp4'))\n",
     "dias = sorted(list(set([u.split('_utt')[0] for u in utts])))\n",
     "for d in dias:\n",
     "    assert \"train_splits\" in d\n",
@@ -94,8 +82,8 @@
     "\n",
     "print(f\"{len(utts_reduced)} utterances in the smaller-dataset\")\n",
     "\n",
-    "shutil.rmtree('./smaller-dataset', ignore_errors=True)\n",
-    "os.makedirs('./smaller-dataset')\n",
+    "shutil.rmtree('DEBUG/smaller-dataset', ignore_errors=True)\n",
+    "os.makedirs('DEBUG/smaller-dataset')\n",
     "\n",
     "for row in annotations[1:]:\n",
     "    SrNo, Utterance, Speaker, Emotion, Sentiment, Dialogue_ID,\\\n",
@@ -104,15 +92,15 @@
     "    if f\"dia{Dialogue_ID}_utt\" not in str(utts_reduced):\n",
     "        continue\n",
     "\n",
-    "    vid_full_path_src = os.path.join(VIDS_DIR, f\"dia{Dialogue_ID}_utt{Utterance_ID}.mp4\")\n",
-    "    vid_full_path_dst = os.path.join('./smaller-dataset/', os.path.basename(vid_full_path_src))\n",
+    "    vid_full_path_src = os.path.join(PATHS['ORIGINAL_VIDEOS']['train'], f\"dia{Dialogue_ID}_utt{Utterance_ID}.mp4\")\n",
+    "    vid_full_path_dst = os.path.join('DEBUG/smaller-dataset/', os.path.basename(vid_full_path_src))\n",
     "\n",
     "    shutil.copyfile(vid_full_path_src, vid_full_path_dst)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -124,9 +112,7 @@
     }
    ],
    "source": [
-    "import json\n",
-    "\n",
-    "actual_utts = sorted(glob('./smaller-dataset/*.mp4'))\n",
+    "actual_utts = sorted(glob('DEBUG/smaller-dataset/*.mp4'))\n",
     "print(f\"actual number of videos copied: {len(actual_utts)}\")\n",
     "\n",
     "dias = sorted(set([path.split('_utt')[0] for path in actual_utts]))\n",
@@ -153,21 +139,21 @@
     "    utts_dev = [os.path.basename(utt) for utt in actual_utts for dia in dias_dev if dia + '_utt' in utt]\n",
     "    utts_test = [os.path.basename(utt) for utt in actual_utts for dia in dias_test if dia + '_utt' in utt]\n",
     "\n",
-    "    with open(f\"dataset-{datasize_}.json\", 'w') as stream:\n",
+    "    with open(f\"DEBUG/smaller-dataset/dataset-{datasize_}.yaml\", 'w') as stream:\n",
     "        to_dump = {'train': utts_train, 'dev': utts_dev, 'test': utts_test}\n",
-    "        json.dump(to_dump, stream)  "
+    "        yaml.dump(to_dump, stream)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "datasets = {}\n",
     "for datasize_ in ['small', 'medium', 'large']:\n",
-    "    with open(f\"dataset-{datasize_}.json\", 'r') as stream:\n",
-    "        datasets[datasize_] = json.load(stream)\n",
+    "    with open(f\"DEBUG/smaller-dataset/dataset-{datasize_}.yaml\", 'r') as stream:\n",
+    "        datasets[datasize_] = yaml.load(stream)\n",
     "\n",
     "assert set(datasets['small']['train'] + datasets['small']['dev'] + datasets['small']['test']).issubset(set(datasets['medium']['train']))\n",
     "\n",
