--- a/MELD/2.visual-features-extraction.ipynb
+++ b/MELD/2.visual-features-extraction.ipynb
@@ -24,120 +24,50 @@
  "cells": [
   {
    "source": [
-    "# Get cleaner annotations and save them as json"
+    "## Get cleaner annotations and save them as yaml"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=3.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "061d1a42db484f2694fcff4f948b6c90"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=9989.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "c90e51b0a32f45b591c965a225077b93"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1109.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "9d93eaff55a34566bd9a2e3fab5576e4"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=2610.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "c12e55021f1b47a990da1cb2c337974a"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n\nthe number of video that didn't match is : 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import yaml\n",
+    "\n",
+    "with open('configs/paths.yaml', 'r') as stream:\n",
+    "    PATHS = yaml.safe_load(stream)\n",
+    "\n",
     "ACTORS = ['Chandler', 'Joey', 'Monica', 'Phoebe', 'Rachel', 'Ross']\n",
     "ONLY_ACTORS = False\n",
-    "ONLY_FACE = False\n",
-    "\n",
+    "ONLY_FACE = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "from glob import glob\n",
     "import csv\n",
-    "import json\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "SAVE_AT = \"/home/tk/datasets/MELD/visual-features/MELD-visual-features/\"\n",
-    "annotation_path = {}\n",
-    "annotation_path['train'] = \"/home/tk/repos/MELD/data/MELD/train_sent_emo.csv\" \n",
-    "annotation_path['dev'] = \"/home/tk/repos/MELD/data/MELD/dev_sent_emo.csv\" \n",
-    "annotation_path['test'] = \"/home/tk/repos/MELD/data/MELD/test_sent_emo.csv\" \n",
-    "\n",
-    "VIDS_DIR = {}\n",
-    "VIDS_DIR['train'] = \"/home/tk/datasets/MELD/MELD.Raw/train/train_splits/\" \n",
-    "VIDS_DIR['dev'] = \"/home/tk/datasets/MELD/MELD.Raw/dev/dev_splits_complete/\" \n",
-    "VIDS_DIR['test'] = \"/home/tk/datasets/MELD/MELD.Raw/test/output_repeated_splits_test\"\n",
-    "\n",
-    "if not os.path.isfile(os.path.join(SAVE_AT, 'datasets.json')):\n",
+    "if not os.path.isfile(PATHS['ANNOTATIONS']['all']):\n",
     "    annotations = {}\n",
-    "    for DATATYPE in ['train', 'dev', 'test']:\n",
-    "        with open(annotation_path[DATATYPE]) as f:\n",
+    "    for DATASET in ['train', 'dev', 'test']:\n",
+    "        with open(PATHS['ANNOTATIONS'][DATASET]) as f:\n",
     "            reader = csv.reader(f)\n",
-    "            annotations[DATATYPE] = list(reader)\n",
+    "            annotations[DATASET] = list(reader)\n",
     "\n",
-    "    vid2anno = {}\n",
+    "    datasets = {}\n",
     "    weird = 0\n",
-    "    for DATATYPE in tqdm(['train', 'dev', 'test']):\n",
-    "        vid2anno[DATATYPE] = {}\n",
-    "        for row in tqdm(annotations[DATATYPE][1:]):\n",
+    "    for DATASET in tqdm(['train', 'dev', 'test']):\n",
+    "        datasets[DATASET] = {}\n",
+    "        for row in tqdm(annotations[DATASET][1:]):\n",
     "            SrNo, Utterance, Speaker, Emotion, Sentiment, Dialogue_ID,\\\n",
     "                Utterance_ID, Season, Episode, StartTime, EndTime = row\n",
     "\n",
@@ -149,11 +79,11 @@
     "                    continue\n",
     "                         \n",
     "\n",
-    "            if f\"dia{Dialogue_ID}_utt{Utterance_ID}.mp4\" not in str(os.listdir(VIDS_DIR[DATATYPE])):\n",
+    "            if f\"dia{Dialogue_ID}_utt{Utterance_ID}.mp4\" not in str(os.listdir(PATHS['ORIGINAL_VIDS'][DATASET])):\n",
     "                weird+=1\n",
     "                continue\n",
     "\n",
-    "            vid2anno[DATATYPE][f\"dia{Dialogue_ID}_utt{Utterance_ID}\"] = \\\n",
+    "            datasets[DATASET][f\"dia{Dialogue_ID}_utt{Utterance_ID}\"] = \\\n",
     "                {'SrNo': SrNo, \n",
     "                'Utterance': Utterance, \n",
     "                'Speaker': Speaker, \n",
@@ -169,36 +99,27 @@
     "    print(f\"the number of video that didn't match is : {weird}\")\n",
     "\n",
     "\n",
-    "    with open(os.path.join(SAVE_AT, 'datasets.json'), 'w', encoding='utf8') as stream:\n",
-    "        json.dump(vid2anno, stream, ensure_ascii=False)\n",
+    "    with open(PATHS['ANNOTATIONS']['all'], 'w') as stream:\n",
+    "        yaml.safe_dump(datasets, stream, encoding='utf-8', allow_unicode=True)\n",
     "\n",
     "else:\n",
-    "    with open(os.path.join(SAVE_AT, 'datasets.json'), 'r', encoding='utf8') as stream:\n",
-    "        vid2anno = json.load(stream)"
+    "    with open(PATHS['ANNOTATIONS']['all'], 'r') as stream:\n",
+    "        datasets = yaml.safe_load(stream)"
    ]
   },
   {
    "source": [
-    "# Instantiate the three classes"
+    "## Instantiate the three classes"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[*] load ckpt from /home/tk/.virtualenvs/dev-python-3.7/lib/python3.7/site-packages/cltl_face_all/arcface/./pretrained_models/arc_res50/e_8_b_40000.ckpt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "from cltl_face_all.face_alignment import FaceDetection\n",
     "from cltl_face_all.arcface import ArcFace\n",
     "\n",
@@ -207,96 +128,23 @@
     "\n",
     "if not ONLY_FACE:\n",
     "    from cltl_face_all.agegender import AgeGender\n",
-    "    ag = AgeGender(device='cpu')\n"
+    "    ag = AgeGender(device='cpu')"
    ]
   },
   {
    "source": [
-    "# Run over the images"
+    "## Run over the images"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=3.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "8bad99475f6e48d8948402de77d3d9a3"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=9989.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "92562a43ec584b339d3b2725ab95d484"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "Format mov,mp4,m4a,3gp,3g2,mj2 detected only with low score of 1, misdetection possible!\n",
-      "moov atom not found\n",
-      "[Errno 1094995529] Invalid data found when processing input: '/home/tk/datasets/MELD/MELD.Raw/train/train_splits/dia125_utt3.mp4'; last error log: [mov,mp4,m4a,3gp,3g2,mj2] moov atom not found\n",
-      "\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1108.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "3ab64e6805f94c82a28f8400444d4e1f"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=2610.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "47aa5c6abdca46749b364370033f1eb1"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import av\n",
     "import numpy as np\n",
@@ -314,16 +162,16 @@
     "\n",
     "signal.signal(signal.SIGALRM, handler) \n",
     "\n",
-    "for DATATYPE in tqdm(['train', 'dev', 'test']):\n",
-    "    os.makedirs(os.path.join(SAVE_AT, DATATYPE), exist_ok=True)\n",
+    "for DATASET in tqdm(['train', 'dev', 'test']):\n",
+    "    os.makedirs(PATHS['VISUAL_FEATURES'][DATASET], exist_ok=True)\n",
     "\n",
-    "    for diautt, anno in tqdm(vid2anno[DATATYPE].items()):\n",
+    "    for diautt, anno in tqdm(datasets[DATASET].items()):\n",
     "        signal.alarm(10)\n",
     "        try:\n",
     "            to_dump = {}\n",
-    "            vidpath = os.path.join(VIDS_DIR[DATATYPE], diautt) + '.mp4'\n",
+    "            vidpath = os.path.join(PATHS['ORIGINAL_VIDEOS'][DATASET], diautt) + '.mp4'\n",
     "            container = av.open(vidpath)\n",
-    "            save_full_path = os.path.join(SAVE_AT, DATATYPE, diautt) + '.npy'\n",
+    "            save_full_path = os.path.join(PATHS['VISUAL_FEATURES'][DATASET], diautt) + '.npy'\n",
     "        except Exception as e:\n",
     "            print(e)\n",
     "            continue\n",
