--- a/MELD/4.find-relevant-faces.ipynb
+++ b/MELD/4.find-relevant-faces.ipynb
@@ -24,33 +24,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "9988\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "import yaml\n",
+    "\n",
+    "with open('configs/paths.yaml', 'r') as stream:\n",
+    "    PATHS = yaml.safe_load(stream)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from glob import glob\n",
     "import random\n",
-    "import json\n",
     "import numpy as np\n",
     "import os\n",
     "\n",
+    "with open(PATHS['ANNOTATIONS']['all'], 'r') as stream:\n",
+    "    datasets = yaml.safe_load(stream)\n",
     "\n",
-    "VISUAL_FEATURES_PATH = '/home/tk/datasets/MELD/visual-features/MELD-visual-features/train/'\n",
-    "VIDS_DIR = \"/home/tk/datasets/MELD/MELD.Raw/train/train_splits/\"\n",
-    "DATASET_PATH = '/home/tk/datasets/MELD/visual-features/MELD-visual-features/datasets.json'\n",
-    "\n",
-    "with open(DATASET_PATH, 'r') as stream:\n",
-    "    datasets = json.load(stream)\n",
-    "\n",
-    "visual_features = glob(os.path.join(VISUAL_FEATURES_PATH, '*.npy'))\n",
+    "visual_features = glob(os.path.join(PATHS['VISUAL_FEATURES']['train'], '*.npy'))\n",
     "visual_features = {os.path.basename(vf).split('.npy')[0] : np.load(vf, allow_pickle=True).item() for vf in visual_features}\n",
     "\n",
     "print(len(visual_features))"
@@ -58,43 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=9989.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "8cfbc3b7eb7d4b999d9c78d4fb068ad4"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "'dia125_utt3' doesn't exist\n",
-      "\n",
-      "Out of the 9989 number of videos (utterances),\n",
-      "There are in total of 6 unique speakers mentioned\n",
-      "\n",
-      "['Chandler', 'Joey', 'Monica', 'Phoebe', 'Rachel', 'Ross']\n",
-      "\n",
-      "and 71883 faces detected\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tqdm.notebook import tqdm\n",
     "FACE_PROB = 0.975\n",
     "EVERY_N_FRAME = 16\n",
     "ACTORS = ['Chandler', 'Joey', 'Monica', 'Phoebe', 'Rachel', 'Ross']\n",
-    "DATASET_chosen = 'train'\n",
-    "dataset_chosen = datasets[DATASET_chosen]\n",
+    "dataset = datasets['train']\n",
     "\n",
     "speakers_mentioned = []\n",
     "embeddings_all = []\n",
@@ -106,7 +76,7 @@
     "landmarks_all = []\n",
     "\n",
     "count = 0\n",
-    "for diautt, annot in tqdm(dataset_chosen.items()):\n",
+    "for diautt, annot in tqdm(dataset.items()):\n",
     "    # There is one face annotated in the entire video.\n",
     "    # We are not even sure if the face is actually there or not.\n",
     "    # Even though the face is there, we are not sure which frame number it is.\n",
@@ -136,42 +106,22 @@
     "\n",
     "speakers_mentioned = sorted(list(set(speakers_mentioned)))\n",
     "\n",
-    "print(f\"Out of the {len(dataset_chosen)} number of videos (utterances),\")\n",
+    "print(f\"Out of the {len(dataset)} number of videos (utterances),\")\n",
     "print(f\"There are in total of {len(speakers_mentioned)} unique speakers mentioned\")\n",
     "print()\n",
     "print(speakers_mentioned)\n",
     "print()\n",
     "print(f\"and {len(embeddings_all)} faces detected\")\n",
     "\n",
+    "os.makedirs('DEBUG', exist_ok=True)\n",
     "np.save('./DEBUG/embeddings-all.npy', embeddings_all)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Estimated number of clusters: 8\n",
-      "Estimated number of noise points: 28721\n",
-      "Silhouette Coefficient: 0.122\n",
-      "Number of faces that are clustered: 43162\n",
-      "\n",
-      " label -1 \t has 28721 counts\n",
-      " label 0 \t has 6833 counts\n",
-      " label 1 \t has 2471 counts\n",
-      " label 2 \t has 7505 counts\n",
-      " label 3 \t has 6275 counts\n",
-      " label 4 \t has 5144 counts\n",
-      " label 5 \t has 6134 counts\n",
-      " label 6 \t has 8548 counts\n",
-      " label 7 \t has 252 counts\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -215,62 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=71883.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "54a303f7122445ccae12df0dbbccb5c6"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=71883.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "3d7ec10b6bd644d29500fd80f70bb2ee"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-9d66a21dc5bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     61\u001b[0m     \u001b[0mcontainer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mav\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvideo_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mframe\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontainer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvideo\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 63\u001b[0;31m         \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0midx\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mframe_num\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mav/video/frame.pyx\u001b[0m in \u001b[0;36mav.video.frame.VideoFrame.to_image\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m~/.virtualenvs/dev-python-3.7/lib/python3.7/site-packages/PIL/Image.py\u001b[0m in \u001b[0;36mfrombytes\u001b[0;34m(mode, size, data, decoder_name, *args)\u001b[0m\n\u001b[1;32m   2656\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2657\u001b[0m     \u001b[0mim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2658\u001b[0;31m     \u001b[0mim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrombytes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdecoder_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2659\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mim\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2660\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.virtualenvs/dev-python-3.7/lib/python3.7/site-packages/PIL/Image.py\u001b[0m in \u001b[0;36mfrombytes\u001b[0;34m(self, data, decoder_name, *args)\u001b[0m\n\u001b[1;32m    792\u001b[0m         \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_getdecoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdecoder_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    793\u001b[0m         \u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetimage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 794\u001b[0;31m         \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    795\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    796\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import shutil\n",
@@ -325,7 +222,7 @@
     "    landmark_ = finding['landmark']\n",
     "    diautt_ = finding['diautt']\n",
     "    frame_num = finding['frame']\n",
-    "    video_path = os.path.join(VIDS_DIR, diautt_) + '.mp4'\n",
+    "    video_path = os.path.join(PATHS['ORIGINAL_VIDEOS']['train'], diautt_) + '.mp4'\n",
     "\n",
     "    os.makedirs(os.path.join('./DEBUG/faces', str(label_)), exist_ok=True)\n",
     "\n",
@@ -352,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,22 +300,14 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 9,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Chandler 6833\nJoey 7505\nMonica 5144\nPhoebe 6134\nRachel 6275\nRoss 8548\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for key, val in to_keep.items():\n",
     "    print(key, len(val))"
@@ -426,17 +315,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Chandler (512,) 1.0 float32\nJoey (512,) 1.0000001 float32\nMonica (512,) 1.0 float32\nPhoebe (512,) 1.0000001 float32\nRachel (512,) 1.0 float32\nRoss (512,) 1.0 float32\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "final_vectors = {}\n",
     "for name, list_of_embs in to_keep.items():\n",
@@ -450,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
