--- a/MELD/5.dataset-stats.ipynb
+++ b/MELD/5.dataset-stats.ipynb
@@ -23,35 +23,17 @@
  "nbformat_minor": 2,
  "cells": [
   {
-   "source": [
-    "## Set the paths correctly"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET_JSON_PATH = \"/home/tk/datasets/MELD/visual-features/MELD-visual-features/datasets.json\"\n",
-    "VIDS_DIR = {}\n",
-    "VIDS_DIR['train'] = \"/home/tk/datasets/MELD/MELD.Raw/train/train_splits/\" \n",
-    "VIDS_DIR['dev'] = \"/home/tk/datasets/MELD/MELD.Raw/dev/dev_splits_complete/\" \n",
-    "VIDS_DIR['test'] = \"/home/tk/datasets/MELD/MELD.Raw/test/output_repeated_splits_test/\"\n",
+    "import yaml\n",
     "\n",
-    "VISUAL_FEATURES_DIR = {}\n",
-    "VISUAL_FEATURES_DIR['train'] = \"/home/tk/datasets/MELD/visual-features/MELD-visual-features/train/\"\n",
-    "VISUAL_FEATURES_DIR['dev'] = \"/home/tk/datasets/MELD/visual-features/MELD-visual-features/dev/\"\n",
-    "VISUAL_FEATURES_DIR['test'] = \"/home/tk/datasets/MELD/visual-features/MELD-visual-features/test/\"\n",
+    "with open('configs/paths.yaml', 'r') as stream:\n",
+    "    PATHS = yaml.safe_load(stream)\n",
     "\n",
-    "MAIN_ACTORS = ['Chandler', 'Joey', 'Monica', 'Phoebe', 'Rachel', 'Ross']\n",
-    "\n",
-    "FACES_DIR = {}\n",
-    "FACES_DIR['train'] = \"/home/tk/datasets/MELD/visual-features/MELD-face-videos/train/\"\n",
-    "FACES_DIR['dev'] = \"/home/tk/datasets/MELD/visual-features/MELD-face-videos/dev/\"\n",
-    "FACES_DIR['test'] = \"/home/tk/datasets/MELD/visual-features/MELD-face-videos/test/\""
+    "MAIN_ACTORS = ['Chandler', 'Joey', 'Monica', 'Phoebe', 'Rachel', 'Ross']"
    ]
   },
   {
@@ -63,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +60,7 @@
      "output_type": "display_data",
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table>\n<tbody>\n<tr><td>train   </td><td>num_utts</td><td>proportion</td></tr>\n<tr><td>-----   </td><td>--------</td><td>----------</td></tr>\n<tr><td>Chandler</td><td>1283    </td><td>0.128     </td></tr>\n<tr><td>Joey    </td><td>1510    </td><td>0.151     </td></tr>\n<tr><td>Rachel  </td><td>1435    </td><td>0.144     </td></tr>\n<tr><td>Monica  </td><td>1299    </td><td>0.13      </td></tr>\n<tr><td>Phoebe  </td><td>1321    </td><td>0.132     </td></tr>\n<tr><td>Ross    </td><td>1458    </td><td>0.146     </td></tr>\n<tr><td>SUM     </td><td>8306    </td><td>0.832     </td></tr>\n<tr><td>-----   </td><td>--------</td><td>----------</td></tr>\n</tbody>\n</table>"
+      "text/html": "<table>\n<tbody>\n<tr><td>train   </td><td>num_utts</td><td>proportion</td></tr>\n<tr><td>-----   </td><td>--------</td><td>----------</td></tr>\n<tr><td>Chandler</td><td>1283    </td><td>0.128     </td></tr>\n<tr><td>Monica  </td><td>1299    </td><td>0.13      </td></tr>\n<tr><td>Rachel  </td><td>1435    </td><td>0.144     </td></tr>\n<tr><td>Joey    </td><td>1510    </td><td>0.151     </td></tr>\n<tr><td>Ross    </td><td>1458    </td><td>0.146     </td></tr>\n<tr><td>Phoebe  </td><td>1321    </td><td>0.132     </td></tr>\n<tr><td>SUM     </td><td>8306    </td><td>0.832     </td></tr>\n<tr><td>-----   </td><td>--------</td><td>----------</td></tr>\n</tbody>\n</table>"
      },
      "metadata": {}
     },
@@ -86,7 +68,7 @@
      "output_type": "display_data",
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table>\n<tbody>\n<tr><td>dev     </td><td>num_utts</td><td>proportion</td></tr>\n<tr><td>---     </td><td>--------</td><td>----------</td></tr>\n<tr><td>Phoebe  </td><td>184     </td><td>0.166     </td></tr>\n<tr><td>Monica  </td><td>137     </td><td>0.124     </td></tr>\n<tr><td>Ross    </td><td>217     </td><td>0.196     </td></tr>\n<tr><td>Chandler</td><td>101     </td><td>0.091     </td></tr>\n<tr><td>Joey    </td><td>149     </td><td>0.134     </td></tr>\n<tr><td>Rachel  </td><td>164     </td><td>0.148     </td></tr>\n<tr><td>SUM     </td><td>952     </td><td>0.859     </td></tr>\n<tr><td>---     </td><td>--------</td><td>----------</td></tr>\n</tbody>\n</table>"
+      "text/html": "<table>\n<tbody>\n<tr><td>dev     </td><td>num_utts</td><td>proportion</td></tr>\n<tr><td>---     </td><td>--------</td><td>----------</td></tr>\n<tr><td>Phoebe  </td><td>184     </td><td>0.166     </td></tr>\n<tr><td>Monica  </td><td>137     </td><td>0.124     </td></tr>\n<tr><td>Rachel  </td><td>164     </td><td>0.148     </td></tr>\n<tr><td>Chandler</td><td>101     </td><td>0.091     </td></tr>\n<tr><td>Joey    </td><td>149     </td><td>0.134     </td></tr>\n<tr><td>Ross    </td><td>217     </td><td>0.196     </td></tr>\n<tr><td>SUM     </td><td>952     </td><td>0.859     </td></tr>\n<tr><td>---     </td><td>--------</td><td>----------</td></tr>\n</tbody>\n</table>"
      },
      "metadata": {}
     },
@@ -94,7 +76,7 @@
      "output_type": "display_data",
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table>\n<tbody>\n<tr><td>test    </td><td>num_utts</td><td>proportion</td></tr>\n<tr><td>----    </td><td>--------</td><td>----------</td></tr>\n<tr><td>Rachel  </td><td>356     </td><td>0.136     </td></tr>\n<tr><td>Joey    </td><td>411     </td><td>0.157     </td></tr>\n<tr><td>Ross    </td><td>373     </td><td>0.143     </td></tr>\n<tr><td>Phoebe  </td><td>291     </td><td>0.111     </td></tr>\n<tr><td>Monica  </td><td>346     </td><td>0.133     </td></tr>\n<tr><td>Chandler</td><td>379     </td><td>0.145     </td></tr>\n<tr><td>SUM     </td><td>2156    </td><td>0.826     </td></tr>\n<tr><td>----    </td><td>--------</td><td>----------</td></tr>\n</tbody>\n</table>"
+      "text/html": "<table>\n<tbody>\n<tr><td>test    </td><td>num_utts</td><td>proportion</td></tr>\n<tr><td>----    </td><td>--------</td><td>----------</td></tr>\n<tr><td>Rachel  </td><td>356     </td><td>0.136     </td></tr>\n<tr><td>Phoebe  </td><td>291     </td><td>0.111     </td></tr>\n<tr><td>Monica  </td><td>346     </td><td>0.133     </td></tr>\n<tr><td>Ross    </td><td>373     </td><td>0.143     </td></tr>\n<tr><td>Joey    </td><td>411     </td><td>0.157     </td></tr>\n<tr><td>Chandler</td><td>379     </td><td>0.145     </td></tr>\n<tr><td>SUM     </td><td>2156    </td><td>0.826     </td></tr>\n<tr><td>----    </td><td>--------</td><td>----------</td></tr>\n</tbody>\n</table>"
      },
      "metadata": {}
     }
@@ -103,11 +85,10 @@
     "from IPython.display import HTML, display\n",
     "# !pip3 install tabulate\n",
     "import tabulate\n",
-    "import json\n",
     "from collections import Counter\n",
     "\n",
-    "with open(DATASET_JSON_PATH, 'r') as stream:\n",
-    "    datasets = json.load(stream)\n",
+    "with open(PATHS['ANNOTATIONS']['all'], 'r') as stream:\n",
+    "    datasets = yaml.safe_load(stream)\n",
     "\n",
     "table = [['DATASET', 'number of dialogues', 'number of utterances', 'number of unique speakers']]\n",
     "table.append('-'*len(foo) for foo in table[0])\n",
@@ -154,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +155,7 @@
     "table.append('-'*len(foo) for foo in table[0])\n",
     "\n",
     "for DATASET in ['train', 'dev', 'test']:\n",
-    "    vids = glob(os.path.join(VIDS_DIR[DATASET], '*.mp4'))\n",
+    "    vids = glob(os.path.join(PATHS['ORIGINAL_VIDEOS'][DATASET], '*.mp4'))\n",
     "    table.append([DATASET, len(vids)])\n",
     "display(HTML(tabulate.tabulate(table, tablefmt='html')))"
    ]
@@ -188,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +186,7 @@
     "table.append('-'*len(foo) for foo in table[0])\n",
     "\n",
     "for DATASET in ['train', 'dev', 'test']:\n",
-    "    npys = glob(os.path.join(VISUAL_FEATURES_DIR[DATASET], '*.npy'))\n",
+    "    npys = glob(os.path.join(PATHS['VISUAL_FEATURES'][DATASET], '*.npy'))\n",
     "    \n",
     "    table.append([DATASET, len(npys)])\n",
     "display(HTML(tabulate.tabulate(table, tablefmt='html')))"
@@ -220,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +218,7 @@
     "table.append('-'*len(foo) for foo in table[0])\n",
     "\n",
     "for DATASET in ['train', 'dev', 'test']:\n",
-    "    facevids = glob(os.path.join(FACES_DIR[DATASET], '*.mp4'))\n",
+    "    facevids = glob(os.path.join(PATHS['FACE_VIDEOS'][DATASET], '*.mp4'))\n",
     "\n",
     "    table.append([DATASET, len(facevids)])\n",
     "display(HTML(tabulate.tabulate(table, tablefmt='html')))"
